--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </div>
     </div>
     <footer>
-        <p>Designed and Developed by<br>Hussain Muhammad Imran<br>District Consultant, ILRMS<br>District Commissioner Office<br>Cachar</p>
+        <p>Designed and Developed by<br>Hussain Muhammad Imran<br>District Consultant, ILRMS<br>District Commissioner Office, Cachar</p>
     </footer>
 
     <script type="module">
